--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -53,92 +53,212 @@ nav ul {
 .btn-primary {
     color: white;
     background-color: orangered;
-    padding: 18px 35px;
-    font-size: 20px;
     font-weight: bold;
-    font-family: open sans;
-    border-radius: 5px;
     border: none;
-    line-height: 27px;
-    letter-spacing: 0%;
+    padding: 18px 35px;
+    border-radius: 5px;
+    font-size: 20px;
 
 }
-.header{
-    background-image: url('../images/developer.png') url('../images/header_bg.png');
+
+/*Display images and so on */
+
+.banner-greet {
+    font-size: 45px;
+    font-weight: 600px;
+    color: #181818;
+
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700px;
+    color: #181818;
+
+}
+
+.banner-description {
+
+    font-size: 18px;
+    font-weight: 400px;
+    color: #757575;
+}
+
+.banner-profilepic {
+    width: 584px;
+    height: 676px;
+}
+
+.banner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner-content {
+    width: 585px;
+    height: 356px;
+    margin-left: 230px;
+
+}
+
+.header {
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
 }
 
-.banner-greet {
-    /* Hi, I am */
-    position: absolute;
-    width: 177px;
-    height: 61px;
-    left: 230px;
-    right: 178px;
-    top: 297px;
-    bottom: -96px;
+/*about section*/
+
+.section-title {
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+    font-family: Open Sans;
+    font-size: 35px;
 }
 
-.banner-name {
-    /* Ariful Isllam */
-    position: absolute;
-    width: 498px;
-    height: 116px;
-    left: 230px;
-    right: -143px;
-    top: 363px;
-    bottom: -217px;
+.scetion-description {
+    font-size: 18px;
+    font-weight: 400;
+    color: #757575;
+    font-family: Open Sans;
+    font-size: 18px;
 }
 
-.banner-para {
-    position: absolute;
-    width: 585px;
-    height: 60px;
-    left: 230px;
-    right: -230px;
-    top: 499px;
-    bottom: -297px;
+.secondary-bg {
+    background-color: #FFF8F3;
 }
 
-.banner-img {
-    position: absolute;
-    width: 584px;
-    height: 676px;
-    left: 978px;
-    right: 38px;
-    top: 161px;
-    bottom: 3419px;
+.about {
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+
 }
 
-.bt-cv {
-    position: absolute;
-    width: 200px;
-    height: 64px;
-    left: 230px;
-    right: -230px;
-    top: 589px;
-    bottom: -589px;
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.banner-item {}
+
+.item-title {
+    color: #757575;
+    font-weight: 400px;
+    font-size: 20px;
+    font-family: Open Sans;
+
+}
+
+.item-description {
+    color: #181818;
+    font-weight: 700px;
+    font-size: 20px;
+    font-family: Open Sans;
+}
+
+
+
+.skill-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+
+.skill {
+    padding: 20px;
     border-radius: 5px;
-    background: rgb(253, 110, 10);
-    border: none;
-    color: white;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    margin-top: 50px;
+    width: 267px;
+    height: 377px;
+    text-align: left;
+}
+
+.skill-description {
+    color: #757575;
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.skill-title {
     font-family: Open Sans;
     font-size: 20px;
+    font-weight: 700;
+    color: #181818;
+}
+
+.resume-container {
+    display: flex;
+    text-align: left;
+    padding-top: 113px;
+    gap: 24px;
+
+}
+
+.resume {
+    text-align: center;
+
+}
+
+.resume-column-title {
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 30px;
     font-weight: 700;
 }
 
-.btn-contact {
-    position: absolute;
-    width: 160px;
-    height: 64px;
-    left: 460px;
-    right: -35px;
-    top: 589px;
-    bottom: -297px;
-    color: orangered;
+.experience-title {
+    color: rgb(71, 71, 71);
     font-family: Open Sans;
-    border: orangered;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
+}
+
+.experiecne-subtitle {
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.description {
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.resume-download-btn {
+    margin-top: 50px;
+}
+
+.form-name {
+    width: 461px;
+    height: 64px;
+    border-radius: 5px;
+    border: none;
+}
+
+.message {
+    width: 461px;
+    height: 180px;
+    border-radius: 5px;
+    border: none;
+    
+}
+.footer-final{
+    display: flex;
+    gap: 117px;
+    justify-content: space-evenly;
+    margin-top: 117px;
 }
